[gd_scene load_steps=36 format=3 uid="uid://copx3gyi50kxw"]

[ext_resource type="Texture2D" uid="uid://sb0fqrpnaocr" path="res://resources/textures/sisyphos.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dxsocwil37nq0" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://bce5j6ce15ctg" path="res://scripts/player_animated_sprite_2d.gd" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://7827cu6nmnaf" path="res://resources/sounds/player_step.wav" id="4_qlg0r"]
[ext_resource type="Script" uid="uid://epioxgcm5jlk" path="res://scripts/sound_effect.gd" id="5_tuyoq"]
[ext_resource type="AudioStream" uid="uid://dlhwbieujoay1" path="res://resources/sounds/player_rest.wav" id="6_tuyoq"]
[ext_resource type="AudioStream" uid="uid://bfthfq2alhprg" path="res://resources/sounds/player_rested.wav" id="7_fjrip"]
[ext_resource type="AudioStream" uid="uid://nnd2u3o8oykw" path="res://resources/sounds/player_hurt.wav" id="9_ur7pv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("1_3vyb7")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("1_3vyb7")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_3vyb7")
region = Rect2(176, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("1_3vyb7")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fulsm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"push_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"push_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}],
"loop": true,
"name": &"rest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_smehm"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ur7pv"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("player")]
sprite_frames = SubResource("SpriteFrames_fulsm")
animation = &"walk_down"
frame = 1
script = ExtResource("3_qhqgy")
player = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_smehm")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, 4)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_ur7pv")

[node name="UpBoulderRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, -1.5)
collision_mask = 2

[node name="LeftBoulderRayCast" type="RayCast2D" parent="."]
position = Vector2(-4, 4)
target_position = Vector2(-1.5, 0)
collision_mask = 2

[node name="RightBoulderRayCast" type="RayCast2D" parent="."]
position = Vector2(4, 4)
target_position = Vector2(1.5, 0)
collision_mask = 2

[node name="StepSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qlg0r")
volume_db = -8.0
script = ExtResource("5_tuyoq")
max_pitch_scale = 1.2
metadata/_custom_type_script = "uid://epioxgcm5jlk"

[node name="RestSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tuyoq")
script = ExtResource("5_tuyoq")
metadata/_custom_type_script = "uid://epioxgcm5jlk"

[node name="RestedSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fjrip")
script = ExtResource("5_tuyoq")
metadata/_custom_type_script = "uid://epioxgcm5jlk"

[node name="HurtSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ur7pv")
script = ExtResource("5_tuyoq")
metadata/_custom_type_script = "uid://epioxgcm5jlk"

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
